--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js",
-    "test": "jest --watchAll"
+    "test": "env-cmd ./config/test.env jest --watch --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "watchPathIgnorePatterns": [
+      "node_modules"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -24,11 +30,7 @@
   "devDependencies": {
     "env-cmd": "^8.0.2",
     "jest": "^29.0.3",
-    "nodemon": "^1.18.9"
-  },
-  "jest": {
-    "watchPathIgnorePatterns": [
-      "node_modules"
-    ]
+    "nodemon": "^1.18.9",
+    "supertest": "^3.4.1"
   }
 }
